// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ensure no name clashes 1`] = `
"const native0 = $$NATIVE_STORAGE;
const boolOrErr0 = native.operators.get(\\"itselfIfBooleanElseError\\");
const callIfFuncAndRightArgs0 = native.operators.get(\\"callIfFunctionAndRightArgumentsElseError\\");
const wrap90 = native.properTailCalls.wrap;
(( <globals redacted> ) => {
  return (() => {
    const runtime = native.builtins.get(\\"runtime\\");
    const display = native.builtins.get(\\"display\\");
    const raw_display = native.builtins.get(\\"raw_display\\");
    const stringify = native.builtins.get(\\"stringify\\");
    const error = native.builtins.get(\\"error\\");
    const prompt = native.builtins.get(\\"prompt\\");
    const is_number = native.builtins.get(\\"is_number\\");
    const is_string = native.builtins.get(\\"is_string\\");
    const is_function = native.builtins.get(\\"is_function\\");
    const is_boolean = native.builtins.get(\\"is_boolean\\");
    const is_undefined = native.builtins.get(\\"is_undefined\\");
    const parse_int = native.builtins.get(\\"parse_int\\");
    const undefined = native.builtins.get(\\"undefined\\");
    const NaN = native.builtins.get(\\"NaN\\");
    const Infinity = native.builtins.get(\\"Infinity\\");
    const math_abs = native.builtins.get(\\"math_abs\\");
    const math_acos = native.builtins.get(\\"math_acos\\");
    const math_acosh = native.builtins.get(\\"math_acosh\\");
    const math_asin = native.builtins.get(\\"math_asin\\");
    const math_asinh = native.builtins.get(\\"math_asinh\\");
    const math_atan = native.builtins.get(\\"math_atan\\");
    const math_atanh = native.builtins.get(\\"math_atanh\\");
    const math_atan2 = native.builtins.get(\\"math_atan2\\");
    const math_ceil = native.builtins.get(\\"math_ceil\\");
    const math_cbrt = native.builtins.get(\\"math_cbrt\\");
    const math_expm1 = native.builtins.get(\\"math_expm1\\");
    const math_clz32 = native.builtins.get(\\"math_clz32\\");
    const math_cos = native.builtins.get(\\"math_cos\\");
    const math_cosh = native.builtins.get(\\"math_cosh\\");
    const math_exp = native.builtins.get(\\"math_exp\\");
    const math_floor = native.builtins.get(\\"math_floor\\");
    const math_fround = native.builtins.get(\\"math_fround\\");
    const math_hypot = native.builtins.get(\\"math_hypot\\");
    const math_imul = native.builtins.get(\\"math_imul\\");
    const math_log = native.builtins.get(\\"math_log\\");
    const math_log1p = native.builtins.get(\\"math_log1p\\");
    const math_log2 = native.builtins.get(\\"math_log2\\");
    const math_log10 = native.builtins.get(\\"math_log10\\");
    const math_max = native.builtins.get(\\"math_max\\");
    const math_min = native.builtins.get(\\"math_min\\");
    const math_pow = native.builtins.get(\\"math_pow\\");
    const math_random = native.builtins.get(\\"math_random\\");
    const math_round = native.builtins.get(\\"math_round\\");
    const math_sign = native.builtins.get(\\"math_sign\\");
    const math_sin = native.builtins.get(\\"math_sin\\");
    const math_sinh = native.builtins.get(\\"math_sinh\\");
    const math_sqrt = native.builtins.get(\\"math_sqrt\\");
    const math_tan = native.builtins.get(\\"math_tan\\");
    const math_tanh = native.builtins.get(\\"math_tanh\\");
    const math_trunc = native.builtins.get(\\"math_trunc\\");
    const math_E = native.builtins.get(\\"math_E\\");
    const math_LN10 = native.builtins.get(\\"math_LN10\\");
    const math_LN2 = native.builtins.get(\\"math_LN2\\");
    const math_LOG10E = native.builtins.get(\\"math_LOG10E\\");
    const math_LOG2E = native.builtins.get(\\"math_LOG2E\\");
    const math_PI = native.builtins.get(\\"math_PI\\");
    const math_SQRT1_2 = native.builtins.get(\\"math_SQRT1_2\\");
    const math_SQRT2 = native.builtins.get(\\"math_SQRT2\\");
    const pair = native.builtins.get(\\"pair\\");
    const is_pair = native.builtins.get(\\"is_pair\\");
    const head = native.builtins.get(\\"head\\");
    const tail = native.builtins.get(\\"tail\\");
    const is_null = native.builtins.get(\\"is_null\\");
    const is_list = native.builtins.get(\\"is_list\\");
    const list = native.builtins.get(\\"list\\");
    const length = native.builtins.get(\\"length\\");
    const map = native.builtins.get(\\"map\\");
    const build_list = native.builtins.get(\\"build_list\\");
    const for_each = native.builtins.get(\\"for_each\\");
    const list_to_string = native.builtins.get(\\"list_to_string\\");
    const reverse = native.builtins.get(\\"reverse\\");
    const append = native.builtins.get(\\"append\\");
    const member = native.builtins.get(\\"member\\");
    const remove = native.builtins.get(\\"remove\\");
    const remove_all = native.builtins.get(\\"remove_all\\");
    const filter = native.builtins.get(\\"filter\\");
    const enum_list = native.builtins.get(\\"enum_list\\");
    const list_ref = native.builtins.get(\\"list_ref\\");
    const accumulate = native.builtins.get(\\"accumulate\\");
    const equal = native.builtins.get(\\"equal\\");
    const draw_data = native.builtins.get(\\"draw_data\\");
    const set_head = native.builtins.get(\\"set_head\\");
    const set_tail = native.builtins.get(\\"set_tail\\");
    const array_length = native.builtins.get(\\"array_length\\");
    const is_array = native.builtins.get(\\"is_array\\");
    const parse = native.builtins.get(\\"parse\\");
    const apply_in_underlying_javascript = native.builtins.get(\\"apply_in_underlying_javascript\\");
    boolOrErr[123] = 1;
    const f = wrap90(callIfFuncAndRightArgs => {
      let wrap = 2;
      wrap0;
      wrap1;
      wrap2;
      wrap3;
      wrap4;
      wrap5;
      wrap6;
      wrap7;
      wrap8;
      wrap9;
    }, \\"function f(callIfFuncAndRightArgs) {\\\\n  let wrap = 2;\\\\n  wrap0;\\\\n  wrap1;\\\\n  wrap2;\\\\n  wrap3;\\\\n  wrap4;\\\\n  wrap5;\\\\n  wrap6;\\\\n  wrap7;\\\\n  wrap8;\\\\n  wrap9;\\\\n}\\");
    const lastStatementResult = eval(\\"native;\\");
    native.globals.set(\\"f\\", {
      kind: \\"const\\",
      value: f
    });
    return lastStatementResult;
  })();
})();
"
`;

exports[`builtins do get prepended 1`] = `
Object {
  "code": "ensure_builtins;",
  "transpiled": "const native = $$NATIVE_STORAGE;
const boolOrErr = native.operators.get(\\"itselfIfBooleanElseError\\");
const callIfFuncAndRightArgs = native.operators.get(\\"callIfFunctionAndRightArgumentsElseError\\");
const wrap = native.properTailCalls.wrap;
(( <globals redacted> ) => {
  return (() => {
    const runtime = native.builtins.get(\\"runtime\\");
    const display = native.builtins.get(\\"display\\");
    const raw_display = native.builtins.get(\\"raw_display\\");
    const stringify = native.builtins.get(\\"stringify\\");
    const error = native.builtins.get(\\"error\\");
    const prompt = native.builtins.get(\\"prompt\\");
    const is_number = native.builtins.get(\\"is_number\\");
    const is_string = native.builtins.get(\\"is_string\\");
    const is_function = native.builtins.get(\\"is_function\\");
    const is_boolean = native.builtins.get(\\"is_boolean\\");
    const is_undefined = native.builtins.get(\\"is_undefined\\");
    const parse_int = native.builtins.get(\\"parse_int\\");
    const undefined = native.builtins.get(\\"undefined\\");
    const NaN = native.builtins.get(\\"NaN\\");
    const Infinity = native.builtins.get(\\"Infinity\\");
    const math_abs = native.builtins.get(\\"math_abs\\");
    const math_acos = native.builtins.get(\\"math_acos\\");
    const math_acosh = native.builtins.get(\\"math_acosh\\");
    const math_asin = native.builtins.get(\\"math_asin\\");
    const math_asinh = native.builtins.get(\\"math_asinh\\");
    const math_atan = native.builtins.get(\\"math_atan\\");
    const math_atanh = native.builtins.get(\\"math_atanh\\");
    const math_atan2 = native.builtins.get(\\"math_atan2\\");
    const math_ceil = native.builtins.get(\\"math_ceil\\");
    const math_cbrt = native.builtins.get(\\"math_cbrt\\");
    const math_expm1 = native.builtins.get(\\"math_expm1\\");
    const math_clz32 = native.builtins.get(\\"math_clz32\\");
    const math_cos = native.builtins.get(\\"math_cos\\");
    const math_cosh = native.builtins.get(\\"math_cosh\\");
    const math_exp = native.builtins.get(\\"math_exp\\");
    const math_floor = native.builtins.get(\\"math_floor\\");
    const math_fround = native.builtins.get(\\"math_fround\\");
    const math_hypot = native.builtins.get(\\"math_hypot\\");
    const math_imul = native.builtins.get(\\"math_imul\\");
    const math_log = native.builtins.get(\\"math_log\\");
    const math_log1p = native.builtins.get(\\"math_log1p\\");
    const math_log2 = native.builtins.get(\\"math_log2\\");
    const math_log10 = native.builtins.get(\\"math_log10\\");
    const math_max = native.builtins.get(\\"math_max\\");
    const math_min = native.builtins.get(\\"math_min\\");
    const math_pow = native.builtins.get(\\"math_pow\\");
    const math_random = native.builtins.get(\\"math_random\\");
    const math_round = native.builtins.get(\\"math_round\\");
    const math_sign = native.builtins.get(\\"math_sign\\");
    const math_sin = native.builtins.get(\\"math_sin\\");
    const math_sinh = native.builtins.get(\\"math_sinh\\");
    const math_sqrt = native.builtins.get(\\"math_sqrt\\");
    const math_tan = native.builtins.get(\\"math_tan\\");
    const math_tanh = native.builtins.get(\\"math_tanh\\");
    const math_trunc = native.builtins.get(\\"math_trunc\\");
    const math_E = native.builtins.get(\\"math_E\\");
    const math_LN10 = native.builtins.get(\\"math_LN10\\");
    const math_LN2 = native.builtins.get(\\"math_LN2\\");
    const math_LOG10E = native.builtins.get(\\"math_LOG10E\\");
    const math_LOG2E = native.builtins.get(\\"math_LOG2E\\");
    const math_PI = native.builtins.get(\\"math_PI\\");
    const math_SQRT1_2 = native.builtins.get(\\"math_SQRT1_2\\");
    const math_SQRT2 = native.builtins.get(\\"math_SQRT2\\");
    const pair = native.builtins.get(\\"pair\\");
    const is_pair = native.builtins.get(\\"is_pair\\");
    const head = native.builtins.get(\\"head\\");
    const tail = native.builtins.get(\\"tail\\");
    const is_null = native.builtins.get(\\"is_null\\");
    const is_list = native.builtins.get(\\"is_list\\");
    const list = native.builtins.get(\\"list\\");
    const length = native.builtins.get(\\"length\\");
    const map = native.builtins.get(\\"map\\");
    const build_list = native.builtins.get(\\"build_list\\");
    const for_each = native.builtins.get(\\"for_each\\");
    const list_to_string = native.builtins.get(\\"list_to_string\\");
    const reverse = native.builtins.get(\\"reverse\\");
    const append = native.builtins.get(\\"append\\");
    const member = native.builtins.get(\\"member\\");
    const remove = native.builtins.get(\\"remove\\");
    const remove_all = native.builtins.get(\\"remove_all\\");
    const filter = native.builtins.get(\\"filter\\");
    const enum_list = native.builtins.get(\\"enum_list\\");
    const list_ref = native.builtins.get(\\"list_ref\\");
    const accumulate = native.builtins.get(\\"accumulate\\");
    const equal = native.builtins.get(\\"equal\\");
    const draw_data = native.builtins.get(\\"draw_data\\");
    const set_head = native.builtins.get(\\"set_head\\");
    const set_tail = native.builtins.get(\\"set_tail\\");
    const array_length = native.builtins.get(\\"array_length\\");
    const is_array = native.builtins.get(\\"is_array\\");
    const parse = native.builtins.get(\\"parse\\");
    const apply_in_underlying_javascript = native.builtins.get(\\"apply_in_underlying_javascript\\");
    const lastStatementResult = eval(\\"ensure_builtins;\\");
    return lastStatementResult;
  })();
})();
",
}
`;
